Disable idle player suspend on OSX.

This breaks hardware decoded video since ownership of video frames
is tied to the hardware decoder.

BUG=595716
TEST=none

Review URL: https://codereview.chromium.org/1813883002

Cr-Commit-Position: refs/heads/master@{#381771}

Former-commit-id: 8413f9ef260a8d5ffac018636abd55f5044ff25c